# ZPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/z/p00/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ZAudio.cpp  ZAudio.h  ZConstants.h  ZFFmpeg.cpp  ZFFmpeg.h  ZJniCall.cpp  ZJniCall.h  ZMedia.cpp  ZMedia.h  ZPacketQueue.cpp  ZPacketQueue.h  ZPlayerState.cpp  ZPlayerState.h  ZVideo.cpp  ZVideo.h  z-player.cpp
app/src/main/java/com/z/p00/: MainActivity.java
app/src/main/java/com/z/p00/player/: ZPlayer.java  ZPlayerView.java
app/src/main/java/com/z/p00/player/listener/: OnMediaErrorListener.java  OnMediaPreparedListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/z/p00/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
